syntax = "proto3";

package grpc;

option go_package = "./proto";

service Namenode{
	// Llama al datanode para registrar la jugada
	rpc RegistrarJugada(RegistrarJugadaReq) returns (RegistrarJugadaResp);
	rpc DevolverJugadasJug(DevolverJugadasJugReq) returns (DevolverJugadasJugResp);
}

message RegistrarJugadaReq{
	int32 numJugador = 2;
	int32 ronda = 3;
	int32 jugada = 4;
}

message RegistrarJugadaResp{
	string msg = 1;
}

message DevolverJugadasJugReq{
	int32 numJugador = 1;
}

message DevolverJugadasJugResp{
	string msg = 1;
}